--- a/solarized/todo.txt
+++ b/solarized/todo.txt
@@ -6,6 +6,6 @@
 	debugger colors
 	scrollbar in Output panel not styled
 	quickfind bar "not found" background color -> if possible to change, set ToolStripTextBoxControl.ForeColor={base1}
-	quickfind highlight all background color
+	quickfind highlight all background color (highlight-back editor style)
 	highlight matching words background color
 	completion tooltip, other tooltip param background color (also "Press F1 to toggle details" text color)
