Improved scripts, speed up theme generation. Changed from one common script to two common scripts (pre- and post-) - applied before and after theme-specific scripts.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 ﻿FlashDevelop bugs/feature requests
 	new
 		should flash log viewer support exceptions' "Error: " matching?
+		output panel search/filter highlighting - should also change foreground color (like selection); bug - clear results sometimes highlight with another color
 	submitted to FD team
 		horizontal line missing? on the bottom of all right-side dock panels
 		bookmarkline-back - apply semi-transparent if view bookmarks is true (same as breakpoints) 
